--- a/styles.scss
+++ b/styles.scss
@@ -88,7 +88,8 @@ $borderRadius: 10px;
     }
   }
   .hide {
-    display: none;
+    @include dimension(0, 0);
+    opacity: 0;
   }
 
   .container {
